# vtkbool

./: .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  CMakeSettings.json  Contact.cxx  Contact.h  Decomposer.cxx  Decomposer.h  Dockerfile  Dockerfile.archlinux  Dockerfile.ubuntu  GeomHelper.cxx  GeomHelper.h  Merger.cxx  Merger.h  Optimize.cxx  Optimize.h  PyInit.cxx  README.md  TODO.md  Utilities.cxx  Utilities.h  _install.py  appveyor.yml  create_report.sh  gauss.js  run_some_tests.sh  runtests.sh  tests.cxx  vtkPolyDataBooleanFilter.cxx  vtkPolyDataBooleanFilter.h  vtkPolyDataContactFilter.cxx  vtkPolyDataContactFilter.h  vtkbool.cmake.in  vtkboolVersion.cmake.in
.github/: FUNDING.yml
.github/workflows/: cmake.yml
decomp/: CMakeLists.txt  Decomposer.cxx  Decomposer.h  dec.py  test.cxx
decomp/cxx/: CMakeLists.txt  test.cxx
decomp/dev/: dec.py
dev/: test.py  test2.py
examples/python/csg_model_making/: Schuerze1.stl  Schuerze2.stl  Schuerze3.stl  Schuerze4.stl  all.stl  all.vtk  band.py  band.stl  band.vtk  teile.py  zusammen.py
libs/: CMakeLists.txt  convex.cxx  gauss.js
libs/aabb/: AABB.h
libs/decomp/: CMakeLists.txt  Decomposer.cxx  Decomposer.h  test.cxx
libs/decomp/dev/: dec.py
libs/merger/: CMakeLists.txt  Merger.cxx  Merger.h  test.cxx
libs/merger/dev/: merge.py
libs/vp/: CMakeLists.txt  RmTrivials.cxx  RmTrivials.h  Tools.cxx  Tools.h  VisPoly.cxx  VisPoly.h  test.cxx  test2.cxx
libs/vp/data_files/: data_0.js  data_1.js  data_2.js  data_3.js  data_4.js
libs/vp/dev/: all_together.py  complex.json  normalize_examples.py  rm_trivials.py  special.json  svg.py  test_special.py  tools.py  untitled.html  untitled.py  vis_poly.py
libs/vp/dev/data_files/: data_0.js  data_1.js  data_2.js  data_3.js  data_4.js  special_0.js  special_1.js  special_2.js  special_4.js  special_5.js  special_6.js
libs/vp/diagn/: create_json.py
libs/vp_new_try/: RmTrivials.cxx  Tools.h
libs/vp_new_try/data_files/: data_2.js
libs/vp_new_try/dev/: complex.json  polys.json  rm_trivials.py  tools.py  untitled.html
libs/vp_new_try/dev/data_files/: special_0.js  special_2.js
merger/: CMakeLists.txt  Merger.cxx  Merger.h  test.cxx
merger/dev/: holes.json  holes2.json
merging/: merge.py
merging/cxx/: CMakeLists.txt  Merger.cxx  test.cxx
module/: CMakeLists.txt  vtk.module
original_ids/: CMakeLists.txt  ids.cxx
paraview/: CMakeLists.txt  paraview.plugin
paraview/module/: CMakeLists.txt  vtk.module  vtkPolyDataBooleanFilter.xml
paraview_plugin/: CMakeLists.txt  vtkPolyDataBooleanFilter.xml  vtkPolyDataBooleanFilterGUI.xml
paraview_plugin/demos/: demo0.pvsm
paraview_plugin/tests/: cover.pvsm  exp_0.pvsm  exp_1.pvsm  exp_10.pvsm  exp_11.pvsm  exp_12.pvsm  exp_13.pvsm  exp_2.pvsm  exp_3.pvsm  exp_4.pvsm  exp_5.pvsm  exp_6.pvsm  exp_7.pvsm  exp_8.pvsm  exp_9.pvsm  spheres.pvsm  zippy84.pvsm
python/examples/frieze/: frieze.py  frieze.vtk  merge_all.py  state.py  state1.py  test0.vtk  test1.vtk  test10.vtk  test11.vtk  test12.vtk  test13.vtk  test14.vtk  test2.vtk  test3.vtk  test4.vtk  test5.vtk  test6.vtk  test7.vtk  test8.vtk  test9.vtk
python/examples/frieze/stl/: test0.stl  test1.stl  test10.stl  test11.stl  test12.stl  test13.stl  test14.stl  test2.stl  test3.stl  test4.stl  test5.stl  test6.stl  test7.stl  test8.stl  test9.stl
python/examples/holes_plate/: plate.py  plate.vtk  plate2.vtk  plate3.vtk  plate4.vtk  test.js  untitled.html
python/examples/lego/: brick.py  brick.vtk
testing/: _test.py  create_frieze_parts.py  dev_merger.py  generate_frieze.py  pytest.ini  test_congruence.cxx  test_filter.py  test_merger.cxx  test_py_module.py  test_python.py  testing.cxx
testing/_test/: InferiorAir.vtk  _test.py
testing/data/: branched.vtk  branched3.vtk  branched4.vtk  branched6.vtk  complex.vtk  cross.vtk  merger.vtk  non-manifold.vtk  pearls.vtk
testing/data/milling/: sphere1.vtk  tube1.vtk
testing/milling/: milling.py
testing/win/: run_tests.bat
transform/: box.vtk  test.py
vp_new_try/: CMakeLists.txt  RmTrivials.cxx  RmTrivials.h  Tools.cxx  Tools.h  VisPoly.cxx  all_together.py  complex.json  rm_trivials.py  test.cxx  test2.cxx  tools.py  untitled.html  vis_poly.py
vp_new_try/cxx/: CMakeLists.txt  RmTrivials.cxx  RmTrivials.h  Tools.cxx  Tools.h  VisPoly.cxx  VisPoly.h  test.cxx  test2.cxx
vp_new_try/cxx/data_files/: data_0.js  data_1.js  data_2.js
vp_new_try/data_files/: data_0.js  data_1.js  data_2.js  data_3.js  special_0.js  special_1.js  special_2.js
vp_new_try/dev/: all_together.py  normalize_examples.py  rm_trivials.py  special.json  test_special.py  tools.py  untitled.html  vis_poly.py
vp_new_try/dev/data_files/: data_0.js  data_1.js  data_2.js  special_0.js  special_1.js  special_2.js
